pics not showing bugs"

--- a/src/styles/components/_Header.scss
+++ b/src/styles/components/_Header.scss
@@ -261,7 +261,7 @@ button:focus {
 }
 .parent {
 	position: relative;
-	transform: translateX(25vw);
+	transform: translateX(20vw);
 }
 @media screen and (max-width: 730px) {
 	.user_btn_con {
